<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <!-- Definicion de guias para adaptar elementos -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_V_guide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_V_guide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_H_guide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_H_guide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>

    <!--Best Practices: Creacion de elementos Down-up en Constrain Layout
        Creación de elementos Material Design-->

    <!--terminos de uso-->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/login_BTN_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:textColor="@color/color_secondary_variant"
        android:text="@string/title_terms"
        app:layout_constraintBottom_toTopOf="@id/login_H_guide90"
        app:layout_constraintStart_toEndOf="@id/login_V_guide10"
        app:layout_constraintEnd_toStartOf="@id/login_V_guide90"/>

    <!--botón ovidaste la contraseña -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/login_BTN_forgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/password_forgot"
        app:layout_constraintBottom_toTopOf="@id/login_BTN_terms"
        app:layout_constraintStart_toEndOf="@id/login_V_guide10"
        app:layout_constraintEnd_toStartOf="@id/login_V_guide90"/>
    <!--botón registrate -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_BTN_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_register"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/login_BTN_forgot"
        app:layout_constraintStart_toEndOf="@id/login_V_guide10"
        app:layout_constraintEnd_toStartOf="@id/login_V_guide90"/>
    <!--botón iniciar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_BTN_go"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_login"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/login_BTN_reg"
        app:layout_constraintStart_toEndOf="@id/login_V_guide10"
        app:layout_constraintEnd_toStartOf="@id/login_V_guide90"/>
    <!--Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/login_TIL_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_login"
        app:errorEnabled="true"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toEndOf="@id/login_V_guide10"
        app:layout_constraintEnd_toStartOf="@id/login_V_guide90"
        app:layout_constraintBottom_toTopOf="@+id/login_BTN_go"
        app:endIconMode="password_toggle"
        app:errorIconDrawable="@drawable/ic_error"
        app:boxStrokeColor="@color/color_primary"
        app:boxStrokeWidth="2dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_TIE_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--Nombre usuario -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/login_TIL_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_user"
        app:errorEnabled="true"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toEndOf="@id/login_V_guide10"
        app:layout_constraintEnd_toStartOf="@id/login_V_guide90"
        app:layout_constraintBottom_toTopOf="@+id/login_TIL_pass"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/color_primary"
        app:boxStrokeWidth="2dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_TIE_user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/login_IV_appicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logobigtransparent"
        app:layout_constraintEnd_toStartOf="@+id/login_V_guide90"
        app:layout_constraintStart_toStartOf="@+id/login_V_guide10"
        app:layout_constraintTop_toTopOf="@+id/login_H_guide10" />


</androidx.constraintlayout.widget.ConstraintLayout>