<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgotPasswordActivity">

    <!-- Definicion de guias para adaptar elementos -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/forgot_V_guide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/forgot_V_guide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/forgot_H_guide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/forgot_H_guide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>

    <!--Best Practices: Creacion de elementos Down-up en Constrain Layout
    Creación de elementos Material Design-->
<!--botón volver a login-->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/forgot_BTN_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@id/forgot_H_guide90"
        app:layout_constraintStart_toEndOf="@id/forgot_V_guide10"
        app:layout_constraintEnd_toStartOf="@id/forgot_V_guide90"/>
<!--boton enviar-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_BTN_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_register"
        android:text="@string/send"
        app:layout_constraintBottom_toTopOf="@id/forgot_BTN_back"
        app:layout_constraintStart_toEndOf="@id/forgot_V_guide10"
        app:layout_constraintEnd_toStartOf="@id/forgot_V_guide90"/>
<!--email-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/forgot_TIL_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toEndOf="@id/forgot_V_guide10"
        app:layout_constraintEnd_toStartOf="@id/forgot_V_guide90"
        app:layout_constraintBottom_toTopOf="@+id/forgot_BTN_send"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/color_primary"
        app:boxStrokeWidth="2dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_TIE_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>
<!--texto-->
    <TextView
        android:id="@+id/forgot_TV_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="@color/color_primary"
        android:text="@string/write_email"
        app:layout_constraintBottom_toTopOf="@+id/forgot_TIL_email"
        app:layout_constraintEnd_toStartOf="@+id/forgot_V_guide90"
        app:layout_constraintStart_toStartOf="@+id/forgot_V_guide10" />
<!--titulo-->
    <TextView
        android:id="@+id/forgot_TV_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/color_primary"
        android:text="@string/password_remember"
        app:layout_constraintBottom_toTopOf="@+id/forgot_TV_texto"
        app:layout_constraintEnd_toStartOf="@+id/forgot_V_guide90"
        app:layout_constraintStart_toStartOf="@+id/forgot_V_guide10" />
<!--imagen-->
    <ImageView
        android:id="@+id/forgot_IV_hashtag"
        android:layout_width="225dp"
        android:layout_height="150dp"
        android:src="@drawable/resetpass"
        app:layout_constraintEnd_toStartOf="@+id/forgot_V_guide90"
        app:layout_constraintStart_toStartOf="@+id/forgot_V_guide10"
        app:layout_constraintTop_toTopOf="@+id/forgot_H_guide10" />
</androidx.constraintlayout.widget.ConstraintLayout>