<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="to_info"
    tools:context=".ui.instructions.InstructionFragment">

    <!-- Definicion de guias para adaptar elementos -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/instruction_oper_V_guide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/instruction_oper_V_guide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/instruction_oper_H_guide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/instruction_oper_H_guide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>



    <!--Texto consultas-->
    <TextView
        android:id="@+id/instruction_oper_TV_checktxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_instructions_check"
        android:textColor="@color/color_primary_variant"
        app:layout_constraintBottom_toTopOf="@+id/instruction_oper_H_guide90"
        app:layout_constraintEnd_toStartOf="@+id/instruction_oper_V_guide90"
        app:layout_constraintStart_toEndOf="@+id/instruction_oper_V_guide10" />

<!--titulo consultas -->

    <!--texto iniciar trámite -->


    <TextView
        android:id="@+id/instruction_oper_TV_checktitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/title_instructions_check"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/color_primary_variant"
        app:layout_constraintBottom_toTopOf="@+id/instruction_oper_TV_checktxt"
        app:layout_constraintEnd_toStartOf="@+id/instruction_oper_V_guide90"
        app:layout_constraintStart_toStartOf="@+id/instruction_oper_V_guide10" />

    <TextView
        android:id="@+id/instruction_oper_TV_optxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/text_instructions_start"
        android:textColor="@color/color_primary_variant"
        app:layout_constraintBottom_toTopOf="@+id/instruction_oper_TV_checktitle"
        app:layout_constraintEnd_toStartOf="@+id/instruction_oper_V_guide90"
        app:layout_constraintStart_toStartOf="@+id/instruction_oper_V_guide10" />

    <TextView
        android:id="@+id/instruction_oper_TV_optitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/title_instructions_start"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/color_primary_variant"
        app:layout_constraintBottom_toTopOf="@+id/instruction_oper_TV_optxt"
        app:layout_constraintEnd_toStartOf="@+id/instruction_oper_V_guide90"
        app:layout_constraintStart_toStartOf="@+id/instruction_oper_V_guide10" />

    <TextView
        android:id="@+id/instruction_oper_TV_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/title_instructions_uses"
        android:textColor="@color/color_primary_variant"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/instruction_oper_TV_optitle"
        app:layout_constraintEnd_toStartOf="@+id/instruction_oper_V_guide90"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toEndOf="@+id/instruction_oper_V_guide10" />

    <ImageView
        android:id="@+id/instruction_oper_IV_appicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logobigtransparent"
        app:layout_constraintEnd_toStartOf="@+id/instruction_oper_V_guide90"
        app:layout_constraintStart_toStartOf="@+id/instruction_oper_V_guide10"
        app:layout_constraintTop_toTopOf="@+id/instruction_oper_H_guide10" />




</androidx.constraintlayout.widget.ConstraintLayout>